--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
 
     <div class="container">
         <div class="image">
-            <img src="images/image-qr-code.png" alt="QR code" width="350px" height="350px">
+            <img src="image-qr-code.png" alt="QR code" width="350px" height="350px">
         </div>
         <div class="content">
             <h1> Improve your front-end skills by building projects</h1>
